Update and rename metrics.yml to run-metrics.yml

--- a/.github/workflows/run-metrics.yml
+++ b/.github/workflows/run-metrics.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   metrics:
-    uses: groda/gha-workflows/.github/workflows/metrics.yml@main
+    uses: groda/github-clone-archiver@v1.1.1
     with:
       metrics-repo: groda/observatory
     secrets:
