--- a/.github/workflows/run-metrics.yml
+++ b/.github/workflows/run-metrics.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   metrics:
-    uses: groda/github-clone-archiver@v1.1.1
+    uses: groda/github-clone-archiver/.github/workflows/metrics.yml@v1.1.1
     with:
       metrics-repo: groda/observatory
     secrets:
