--- a/.github/workflows/record-metrics.yml
+++ b/.github/workflows/record-metrics.yml
@@ -9,9 +9,14 @@ permissions:
   contents: read
 
 jobs:
-  metrics:
-    uses: groda/github-traffic-archiver/.github/workflows/metrics.yml@v2
-    with:
-      metrics-repo: groda/observatory
-    secrets:
-      METRICS_PAT: ${{ secrets.METRICS_PAT }}
+  update-metrics:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4 
+      
+      - name: Run Traffic Archiver
+        uses: groda/github-traffic-archiver@v2
+        with:
+          metrics-repo: 'groda/observatory'
+          metrics-pat: ${{ secrets.METRICS_PAT }}
+          # observed-repo defaults to the current repo if omitted
