--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -1,9 +1,10 @@
 name: Gitleaks Secret Scan
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
+ workflow_dispatch: 
+  #push:
+  #  branches: [ main ]
+  #pull_request:
 
 jobs:
   gitleaks:
